Update design and contents

--- a/style.css
+++ b/style.css
@@ -1,108 +1,137 @@
-* {
+body{
+  /* margin: 0;
+  padding: 0; */
+  background: url(bg2.jpg) no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+.box{
+  width: 30%;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 2%;
+  text-align: center;
+  margin: auto;
+  margin-top: 5%;
+  color: white;
+  font-family: monospace;
+}
+.box-img{
+  border-radius: 20%;
+  width: 40%;
+  height: 40%;
+}
+.box h1{
+  font-size: 200%;
+  letter-spacing: 4px;
+  font-weight: 100;
+}
+.box h5{
+  font-size: 150%;
+  letter-spacing: 3px;
+  font-weight: 100;
+}
+.box p{
+  text-align: justify;
+  font: 120% monospace;
+}
+ul{
   margin: 0;
   padding: 0;
 }
-
-.container {
-  background: url(bg.jpg);
-  height: 100vh;
-  background-size: 100% 100%;
-}
-
-.container .navbar {
-  width: 100%;
-  height: 80px;
-  background: rgba(22, 122, 214, 0.4);
-}
-
-.navbar .logo {
+.box li{
   display: inline-block;
-  /* margin-left: 50px; */
-  margin-left: 3%;
-  margin-top: 1.2%;
-  /* margin-top: 20px; */
+  margin: 5%;
+  list-style: none;
+}
+.box li a{
+  color: white;
+  text-decoration: none;
+  font-size: 300%;
+  transition: all ease-in-out 250ms;
+}
+.box li a:hover{
+  color: #b9b9b9;
 }
 
-.navbar .logo a {
-  text-decoration: none;
-  color: aliceblue;
-  /* font-size: 30px; */
-  font-size: 200%;
-  font-family: "Courier New", Courier, monospace;
-}
 
 .navbar ul {
-  float: right;
-  /* margin-right: 20px; */
-  margin-right: 1;
+  float: center;
+  margin-top: 3%;
+  margin-left: 33%;
 }
 
 .navbar ul li {
   list-style: none;
   display: inline-block;
-  margin: 0 16px;
-  line-height: 80px;
+  margin: 0 5%;
+  line-height: 10%;
 }
 
 .navbar ul li a {
   color: aliceblue;
   text-decoration: none;
   /* font-size: 20px; */
-  font-size: 120%;
-  padding: 6px 13px;
+  font-size: 130%;
+  padding: 5px 13px;
   font-family: "Courier New", Courier, monospace;
   transition: 0.5s;
 }
 
 .navbar ul li a.active,
 .navbar ul li a:hover {
-  background: #d9880c;
-  border-radius: 2px;
+  background: #a36276;
+  border-radius: 5%;
 }
 
-.container .center {
-  position: absolute;
-  top: 45%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-  font-family: "Courier New", Courier, monospace;
-  color: aliceblue;
-  user-select: none;
+.center-box
+{
+    border: 5% solid black;
+    width: 50%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15%;
+    margin-bottom: 85%;
 }
 
-.center h1 {
-  color: aliceblue;
-  /* font-size: 50px; */
-  font-size: 300%;
-  font-weight: bold;
-  font-family: "Courier New", Courier, monospace;
+.b {
+  display: block;
+  position: relative;
+  margin-left: 15%;
+  float: left;
+  width: 25%;
+  height: 25%;
 }
 
-.center h2 {
-  color: aliceblue;
-  /* font-size: 30px; */
-  font-size: 200%;
-  font-weight: bold;
-  width: 700px;
-  margin-top: 10px;
+.center-box-no-border
+{
+    width: 70%;
+    height: 100%;
+    margin-left: 20%;
+    margin-right: auto;
+    margin-top: 15%;
+    margin-bottom: 85%;
 }
 
-.buttons button {
-  height: 50px;
-  /* width: 180px; */
-  font-size: 20px;
-  font-size: 150%;
-  font-family: "Courier New", Courier, monospace;
-  font-weight: bold;
-  color: aliceblue;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  outline: none;
-  border-radius: 6px;
-  transition: 0.5s;
+.center-box-no-border h2
+{
+  display: block;
+  position: relative;
+  margin-left: 15%;
+  float: left;
+  width: 60%;
+  height: 25%;
 }
 
-.buttons button:hover {
-  background: #d9880c;
+.center-box-no-border p
+{
+  display: block;
+  position: relative;
+  margin-left: 15%;
+  float: left;
+  width: 60%;
+  height: 25%;
 }
